simple/gohttp/deploy/env/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: APP_NAME
  labels:
    app: APP_NAME
  namespace: PROJECT_NAME
  annotations:
    linkerd.io/inject: enabled
spec:
  replicas: 1
  selector:
    matchLabels:
      app: APP_NAME
  template:
    metadata:
      labels:
        app: APP_NAME
        namespace: PROJECT_NAME
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: APP_NAME
          image: CONTAINER_REGISTRY_URLAPP_NAME:APP_VERSION
          ports:
            - containerPort: APP_PORT
          resources:
            requests:
              memory: "16Mi"
              cpu: "500m"
            limits:
              memory: "128Mi"
              cpu: "2"
          livenessProbe:
            httpGet:
              path: /healthz
              port: APP_PORT
            initialDelaySeconds: 3
            periodSeconds: 10
